Closed Bug 1665979 Opened 5 years ago Closed 5 years ago

Crash in [@ nsTHashtable<T>::s_HashKey | PLDHashTable::Search | nsHostResolver::AddToEvictionQ]

Categories

(Core :: Networking: DNS, defect, P1)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox80 --- unaffected
firefox81 --- unaffected
firefox82 --- fixed
firefox83 --- fixed

People

(Reporter: aryx, Assigned: valentin)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression, Whiteboard: [necko-triaged][trr])

Crash Data

Attachments

(1 file)

This call passes through SaveAdditionalRecords which got added in bug 1645108 on Tuesday.

Crash report: https://crash-stats.mozilla.org/report/index/0fdd9fe4-ac6d-434e-873f-ff9dd0200917

Top 10 frames of crashing thread:

0 xul.dll static nsTHashtable<nsBaseHashtableET<nsGenericHashKey<nsHostKey>, RefPtr<nsHostRecord> > >::s_HashKey xpcom/ds/nsTHashtable.h:487
1 xul.dll PLDHashTable::Search const xpcom/ds/PLDHashTable.cpp:496
2 xul.dll nsHostResolver::AddToEvictionQ netwerk/dns/nsHostResolver.cpp:1875
3 xul.dll nsHostResolver::CompleteLookup netwerk/dns/nsHostResolver.cpp:2135
4 xul.dll mozilla::net::TRR::SaveAdditionalRecords netwerk/dns/TRR.cpp:1372
5 xul.dll mozilla::net::TRR::DohDecode netwerk/dns/TRR.cpp:1310
6 xul.dll mozilla::net::TRR::FollowCname netwerk/dns/TRR.cpp:1621
7 xul.dll mozilla::net::TRR::OnStopRequest netwerk/dns/TRR.cpp:1734
8 xul.dll mozilla::net::TRRServiceChannel::OnStopRequest netwerk/protocol/http/TRRServiceChannel.cpp:1210
9 xul.dll nsInputStreamPump::OnStateStop netwerk/base/nsInputStreamPump.cpp:649
Flags: needinfo?(valentin.gosu)

If we don't, the record may already be on the eviction queue, meaning
we try to remove it twice.

Assignee: nobody → valentin.gosu
Status: NEW → ASSIGNED
Blocks: doh
Severity: -- → S2
Component: Networking → Networking: DNS
Flags: needinfo?(valentin.gosu)
Priority: -- → P1
Whiteboard: [necko-triaged][trr]
Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/19330c144141 Make sure we call MaybeRenewHostRecord when adding additional record r=kershaw,necko-reviewers
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Comment on attachment 9176732 [details]
Bug 1665979 - Make sure we call MaybeRenewHostRecord when adding additional record r=dragana,kershaw

Beta/Release Uplift Approval Request

  • User impact if declined: Potential crashes when using DNS over HTTPS
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky):
  • String changes made/needed:
Attachment #9176732 - Flags: approval-mozilla-beta?

Comment on attachment 9176732 [details]
Bug 1665979 - Make sure we call MaybeRenewHostRecord when adding additional record r=dragana,kershaw

approved for 82.0b2

Attachment #9176732 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: