Bug 1665979 - Make sure we call MaybeRenewHostRecord when adding additional record. r=kershaw,necko-reviewers, a=jcristau

If we don't, the record may already be on the eviction queue, meaning
we try to remove it twice.

Differential Revision: https://phabricator.services.mozilla.com/D90787